<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Spotter Tool</string>
    <string name="main_label">Weather Spotter Data</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonSave">Save</string>
    <string name="buttonShow">Show All</string>
    <string name="buttonDelete">Delete</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="buttonHistory">History</string>
    <string name="title_activity_compass">Compass</string>
    <string name="buttonCompass">Compass</string>	
</resources>
